--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <title>Green Design</title>
     <link href="style.css" rel="stylesheet" type="text/css">
+    <script   src="https://code.jquery.com/jquery-1.11.3.js"
+			  integrity="sha256-IGWuzKD7mwVnNY01LtXxq3L84Tm/RJtNCYBfXZw3Je0="
+			  crossorigin="anonymous"></script>
 </head>
     
 <body>
@@ -79,3 +82,12 @@
                     <li class="twitter"><a href="">Twitter</a></li>
                     <li class="pinterest"><a href="">Pinterest</a></li>
 <li class="linked-in"><a href="">Linked In</a></li>
+                </ul>
+            </section>
+        </div>
+    </div>
+    <script src="scripts/jquery-1.11.3.js"></script>
+    <script src="scripts/script.js"></script>
+</body>
+
+</html>
