--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <script   src="https://code.jquery.com/jquery-1.11.3.js"
 			  integrity="sha256-IGWuzKD7mwVnNY01LtXxq3L84Tm/RJtNCYBfXZw3Je0="
 			  crossorigin="anonymous"></script>
-			  <script src="scripts/script.js"></script>
 </head>
     
 <body>
@@ -87,7 +86,8 @@
             </section>
         </div>
     </div>
-    
+    <script src="scripts/jquery-1.11.3.js"></script>
+    <script src="scripts/script.js"></script>
 </body>
 
 </html>
