--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
 	<title>Green Design</title>
 	<link href="style.css" rel="stylesheet" type="text/css">
-	<script src="https://code.jquery.com/jquery-1.11.3.js">
-	</script>
+	
 </head>
 <body>
 	<header>
@@ -95,7 +94,7 @@
 			</section>
 		</div>
 	</div>
-	<script src="scripts/jquery-1.11.3.js">
+	<script src="scripts/jquery-3.3.1.min.js">
 	</script> 
 	<script src="scripts/script.js">
 	</script>
