--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
 	<title>Green Design</title>
 	<link href="style.css" rel="stylesheet" type="text/css">
-	
+	<script src="https://code.jquery.com/jquery-3.3.1.min.js"
+            integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+            crossorigin="anonymous"></script>
 </head>
 <body>
 	<header>
