--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
 <head>
     <title>Green Design</title>
     <link href="style.css" rel="stylesheet" type="text/css">
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js"
-            integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-            crossorigin="anonymous"></script>
+  
 </head>
     
 <body>
@@ -86,8 +84,10 @@
             </section>
         </div>
     </div>
-  
-    <script src="scripts/script.js" ></script>
+  <script src="https://code.jquery.com/jquery-1.11.3.js"
+		 integrity="sha256-IGWuzKD7mwVnNY01LtXxq3L84Tm/RJtNCYBfXZw3Je0="
+		crossorigin="anonymous"></script>
+    <script src="script.js" ></script>
 </body>
 
 </html>
