--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
      background: orange;">Unwrap</div>
      
         <div class="wrapper">
-            <section id="points-of-sale" style="height: 0; overflow: hidden;">
+            <section id="points-of-sale" >
                 <h2>Points of Sale</h2>
                 <ul>
                     <li>
