--- a/index.html
+++ b/index.html
@@ -63,9 +63,11 @@
                 </ul>
             </section>
             <section id="clients">
-                <h2>What Our Clients Say</h2>
+                <h2>Clients</h2>
                 <img src="images/head.png" alt="quote">
                 <blockquote>quatis alique mos et aut occae cum, veliquaspit quo quam, si idem reprorisqui doluptatur accum si sunt ut officiisto enecab id et aut es et l</blockquote>
+                <blockquote> veliquaspit quo quan, si idem reprorisqui doluptatur accum si sunt ut enecab id et aut es el l yup</blockquote>
+                <blockquote>whoo hah veliquaspit quo quam, si iden reprorisqui doluptatur accum si sunt ut enecab id et aut es et l yup</blockquote>
             </section>
             <section id="contact">
                 <h2>Drop Us A Line</h2>
